Temporarily Fixed button overflow on mobile devices

--- a/style.css
+++ b/style.css
@@ -144,6 +144,10 @@ main {
     main {
         margin: 0;
     }
+
+    nav-item:last-child {
+        display: none;
+    } 
 }
 /* For large screen devices*/
 @media only screen and (min-width: 600px) {
